--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "graphql": "^16.12.0",
+    "graphql-subscriptions": "^2.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.18.0",
